z-index order and minor bug prevent update

--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,13 @@ body {
 *::before {
   box-sizing: border-box;
 }
+*{
+  -ms-user-select: none;
+  -moz-user-select: -moz-none;
+  -khtml-user-select: none;
+  -webkit-user-select: none;
+  user-select: none;
+}
 /* .noise_cover::after {
   content: "";
   position: absolute;
@@ -26,7 +33,7 @@ body {
   height: 300vh;
   left: -50%;
   top: -50%;
-  z-index: 200;
+  z-index: 5;
   background-image: url(../src/noisesample.png);
   animation: grain 0.1s infinite;
   opacity: 0.08;
@@ -44,7 +51,20 @@ body {
   serif;
 }
 
-
+.trans-wrap{
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: transparent;
+  opacity: 0;
+  z-index: 3;
+  display: none;
+  justify-content: center;
+  align-items: center;
+  display: none;
+}
 /* ---------------------------------------- */
 /* default end */
 /* ---------------------------------------- */
@@ -57,7 +77,7 @@ body {
   height: 100%;
   background-color: black;
   opacity: 0.8;
-  z-index: 1000;
+  z-index: 10;
   display: none;
   justify-content: center;
   align-items: center;
@@ -69,7 +89,7 @@ body {
   width: 100%;
   height: 100%;
   opacity: 1;
-  z-index: 1001;
+  z-index: 11;
   display: none;
   justify-content: center;
   align-items: center;
@@ -127,7 +147,7 @@ main {
   box-sizing: border-box;
   padding: 24px;
   color: beige;
-  z-index: 99;
+  z-index: 2;
   font-weight: 300;
   border-bottom: 1px solid beige;
   font-size: 20px;
@@ -150,7 +170,7 @@ main {
   /* background-color: red; */
   background-color: #222222;
   border-bottom: 1px solid beige;
-  z-index: 98;
+  z-index: 1;
 }
 
 .grid {
@@ -251,7 +271,7 @@ main {
   width: 100%;
   min-height: 100vh;
   display: none;
-  z-index: 101;
+  z-index: 4;
   background-color: beige;
 }
 
